--- a/project/package.json
+++ b/project/package.json
@@ -6,11 +6,13 @@
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "history": "^5.2.0",
+    "http-status-codes": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.4",
     "reselect": "^4.0.0"
   },
   "scripts": {
