--- a/project/package.json
+++ b/project/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.4",
+    "react-toastify": "^2.2.2",
     "reselect": "^4.0.0"
   },
   "scripts": {
